--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           This project was coded by
           <a href="https://github.com/lebakammabatho?tab=repositories" target="_blank">Mmabatho Lebaka</a> <br> and is
           <a href="https://github.com/lebakammabatho/week-7-homework" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://steady-youtiao-6c7b67.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
                     
