--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         
           <div class="weather-container">
           <header>
-            <form class="search-form">
-              <input type="search" placeholder="Enter a city...." required class="search-form-input">
+            <form class="search-form" id="search-form">
+              <input type="search"  placeholder="Enter a city...." required class="search-form-input" id="search-form-input">
               <input type="submit" value="Search" class="search-form-button">
             </form>
           </header>
           <main>
             <div class="weather-info">
             <div>
-            <h1 class="weather-app-city">Pretoria</h1>
+            <h1 class="weather-app-city" id="weather-app-city">Pretoria</h1>
             <p class="weather-app-details">
               Tuesday 14:49, scattered clouds
               <br>
