--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           
             <div class="weather-app-temparature-container"> 
               <div class="weather-app-icon">☁️</div> 
-              <div class="weather-app-temparature-value">12</div>
+              <div class="weather-app-temparature-value" id="weather-value"></div>
               <div class="weather-app-unit">°C</div>
             </div>
           </div>
